# oip__itis_2025

./: README.md  boolean_search_hw3.py  constants.py  count_tf_and_idf_hw4.py  crawler_hw1.py  info_engine.html  info_engine_app_demo.py  info_search_console_hw5.py  inverted_index_hw3.py  inverted_index_tokens.json  lemmas.txt  pyproject.toml  test_boolean_search.py  tokenize_and_lemmatize.py  tokens.txt
lemmas/: plant_100_lemmas.txt  plant_101_lemmas.txt  plant_102_lemmas.txt  plant_103_lemmas.txt  plant_104_lemmas.txt  plant_105_lemmas.txt  plant_106_lemmas.txt  plant_107_lemmas.txt  plant_108_lemmas.txt  plant_109_lemmas.txt  plant_10_lemmas.txt  plant_110_lemmas.txt  plant_111_lemmas.txt  plant_112_lemmas.txt  plant_113_lemmas.txt  plant_114_lemmas.txt  plant_115_lemmas.txt  plant_116_lemmas.txt  plant_117_lemmas.txt  plant_118_lemmas.txt  plant_119_lemmas.txt  plant_11_lemmas.txt  plant_120_lemmas.txt  plant_12_lemmas.txt  plant_13_lemmas.txt  plant_14_lemmas.txt  plant_15_lemmas.txt  plant_16_lemmas.txt  plant_17_lemmas.txt  plant_18_lemmas.txt  plant_19_lemmas.txt  plant_20_lemmas.txt  plant_21_lemmas.txt  plant_22_lemmas.txt  plant_23_lemmas.txt  plant_24_lemmas.txt  plant_25_lemmas.txt  plant_26_lemmas.txt  plant_27_lemmas.txt  plant_28_lemmas.txt  (+79 more)
pages_html/: index.txt  plant_10.html  plant_100.html  plant_101.html  plant_102.html  plant_103.html  plant_104.html  plant_105.html  plant_106.html  plant_107.html  plant_108.html  plant_109.html  plant_11.html  plant_110.html  plant_111.html  plant_112.html  plant_113.html  plant_114.html  plant_115.html  (+101 more)
(+357 files in other folders)
