[tool.poetry]
name = "oip"
version = "0.1.0"
description = ""
authors = ["dasha <dasha.ved93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
